闭环进度相机与剔除 / close progression camera and culling
迁移生存进度、家园、服务端相机会话、feedback/progression 网络，以及客户端范围剔除几何、状态机和真实网络闭环。记录第六轮全量编译前线，保留未迁服务端持久化为显式失败。

Ports survival progression, homes, server camera sessions, feedback/progression packets, and the client culling geometry/state/network loop. Documents the sixth compile frontier while keeping the unported server persistence boundary explicit.