@@ -1,21 +1,17 @@
 package com.rtsbuilding.rtsbuilding.client.screen.culling;
 
-import net.minecraft.core.Direction;
-import net.minecraft.world.phys.AABB;
-import net.minecraft.world.phys.Vec3;
+import net.minecraft.util.EnumFacing;
+import net.minecraft.util.math.AxisAlignedBB;
+import net.minecraft.util.math.Vec3d;
 
 import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
 
-/**
- * 范围剔除盒的世界空间轴向手柄。
- *
- * <p>这个类只描述六个面向箭头的可视几何和命中热区，不负责修改盒子尺寸。
- * 渲染器和输入命中共用这里的 AABB，避免出现玩家看见箭头却无法滚轮选中的错位。</p>
- */
+/** 六个面向箭头的可见几何和射线热区；不负责改变盒子尺寸。 */
 public final class RtsCullingAxisHandle {
     private static final double GAP = 0.10D;
     private static final double SHAFT_LENGTH = 0.58D;
@@ -24,168 +20,161 @@ public final class RtsCullingAxisHandle {
     private static final double HEAD_HALF = 0.18D;
     private static final double EPSILON = 1.0E-7D;
 
-    private RtsCullingAxisHandle() {
-    }
+    private RtsCullingAxisHandle() { }
 
     public static List<Handle> handles(RtsCullingBox box) {
-        if (box == null) {
-            return List.of();
-        }
-        return handles(box.asAabb());
+        return box == null ? Collections.<Handle>emptyList() : handles(box.asAabb());
     }
 
-    public static List<Handle> handles(AABB box) {
-        return handles(box, null);
-    }
+    public static List<Handle> handles(AxisAlignedBB box) { return handles(box, null); }
 
-    public static List<Handle> handles(AABB box, Set<Direction> allowedDirections) {
-        if (box == null) {
-            return List.of();
-        }
-        List<Handle> result = new ArrayList<>(6);
-        addHandleIfAllowed(result, box, Direction.EAST, allowedDirections);
-        addHandleIfAllowed(result, box, Direction.WEST, allowedDirections);
-        addHandleIfAllowed(result, box, Direction.UP, allowedDirections);
-        addHandleIfAllowed(result, box, Direction.DOWN, allowedDirections);
-        addHandleIfAllowed(result, box, Direction.SOUTH, allowedDirections);
-        addHandleIfAllowed(result, box, Direction.NORTH, allowedDirections);
+    public static List<Handle> handles(AxisAlignedBB box, Set<EnumFacing> allowedDirections) {
+        if (box == null) return Collections.emptyList();
+        List<Handle> result = new ArrayList<Handle>(6);
+        add(result, box, EnumFacing.EAST, allowedDirections);
+        add(result, box, EnumFacing.WEST, allowedDirections);
+        add(result, box, EnumFacing.UP, allowedDirections);
+        add(result, box, EnumFacing.DOWN, allowedDirections);
+        add(result, box, EnumFacing.SOUTH, allowedDirections);
+        add(result, box, EnumFacing.NORTH, allowedDirections);
         return result;
     }
 
-    public static Optional<HandleHit> nearestHit(RtsCullingBox box, Vec3 origin, Vec3 direction, double maxDistance) {
+    public static Optional<HandleHit> nearestHit(RtsCullingBox box, Vec3d origin,
+            Vec3d direction, double maxDistance) {
         return nearestHit(box, origin, direction, maxDistance, null);
     }
 
-    public static Optional<HandleHit> nearestHit(RtsCullingBox box, Vec3 origin, Vec3 direction, double maxDistance,
-            Set<Direction> allowedDirections) {
-        return box == null
-                ? Optional.empty()
+    public static Optional<HandleHit> nearestHit(RtsCullingBox box, Vec3d origin,
+            Vec3d direction, double maxDistance, Set<EnumFacing> allowedDirections) {
+        return box == null ? Optional.<HandleHit>empty()
                 : nearestHit(box.asAabb(), origin, direction, maxDistance, allowedDirections);
     }
 
-    public static Optional<HandleHit> nearestHit(AABB box, Vec3 origin, Vec3 direction, double maxDistance,
-            Set<Direction> allowedDirections) {
-        if (box == null || origin == null || direction == null || direction.lengthSqr() < EPSILON) {
+    public static Optional<HandleHit> nearestHit(AxisAlignedBB box, Vec3d origin,
+            Vec3d direction, double maxDistance, Set<EnumFacing> allowedDirections) {
+        if (box == null || origin == null || direction == null
+                || direction.lengthSquared() < EPSILON || maxDistance < 0.0D) {
             return Optional.empty();
         }
-        Vec3 normalized = direction.normalize();
-        return handles(box, allowedDirections).stream()
-                .map(handle -> handle.hit(origin, normalized, maxDistance))
-                .flatMap(Optional::stream)
-                .min(Comparator.comparingDouble(HandleHit::distance));
+        Vec3d normalized = direction.normalize();
+        HandleHit nearest = null;
+        for (Handle handle : handles(box, allowedDirections)) {
+            Optional<HandleHit> hit = handle.hit(origin, normalized, maxDistance);
+            if (hit.isPresent() && (nearest == null || hit.get().distance() < nearest.distance())) {
+                nearest = hit.get();
+            }
+        }
+        return Optional.ofNullable(nearest);
     }
 
-    private static void addHandleIfAllowed(List<Handle> result, AABB box, Direction direction,
-            Set<Direction> allowedDirections) {
-        if (allowedDirections == null || allowedDirections.contains(direction)) {
-            result.add(handle(box, direction));
+    private static void add(List<Handle> result, AxisAlignedBB box, EnumFacing direction,
+            Set<EnumFacing> allowed) {
+        if (allowed == null || allowed.contains(direction)) result.add(handle(box, direction));
+    }
+
+    private static Handle handle(AxisAlignedBB box, EnumFacing direction) {
+        double cx = (box.minX + box.maxX) * 0.5D;
+        double cy = (box.minY + box.maxY) * 0.5D;
+        double cz = (box.minZ + box.maxZ) * 0.5D;
+        switch (direction) {
+            case EAST: return new Handle(direction,
+                    new AxisAlignedBB(box.maxX + GAP, cy - SHAFT_HALF, cz - SHAFT_HALF,
+                            box.maxX + GAP + SHAFT_LENGTH, cy + SHAFT_HALF, cz + SHAFT_HALF),
+                    new AxisAlignedBB(box.maxX + GAP + SHAFT_LENGTH, cy - HEAD_HALF, cz - HEAD_HALF,
+                            box.maxX + GAP + SHAFT_LENGTH + HEAD_LENGTH, cy + HEAD_HALF, cz + HEAD_HALF));
+            case WEST: return new Handle(direction,
+                    new AxisAlignedBB(box.minX - GAP - SHAFT_LENGTH, cy - SHAFT_HALF, cz - SHAFT_HALF,
+                            box.minX - GAP, cy + SHAFT_HALF, cz + SHAFT_HALF),
+                    new AxisAlignedBB(box.minX - GAP - SHAFT_LENGTH - HEAD_LENGTH, cy - HEAD_HALF, cz - HEAD_HALF,
+                            box.minX - GAP - SHAFT_LENGTH, cy + HEAD_HALF, cz + HEAD_HALF));
+            case UP: return new Handle(direction,
+                    new AxisAlignedBB(cx - SHAFT_HALF, box.maxY + GAP, cz - SHAFT_HALF,
+                            cx + SHAFT_HALF, box.maxY + GAP + SHAFT_LENGTH, cz + SHAFT_HALF),
+                    new AxisAlignedBB(cx - HEAD_HALF, box.maxY + GAP + SHAFT_LENGTH, cz - HEAD_HALF,
+                            cx + HEAD_HALF, box.maxY + GAP + SHAFT_LENGTH + HEAD_LENGTH, cz + HEAD_HALF));
+            case DOWN: return new Handle(direction,
+                    new AxisAlignedBB(cx - SHAFT_HALF, box.minY - GAP - SHAFT_LENGTH, cz - SHAFT_HALF,
+                            cx + SHAFT_HALF, box.minY - GAP, cz + SHAFT_HALF),
+                    new AxisAlignedBB(cx - HEAD_HALF, box.minY - GAP - SHAFT_LENGTH - HEAD_LENGTH, cz - HEAD_HALF,
+                            cx + HEAD_HALF, box.minY - GAP - SHAFT_LENGTH, cz + HEAD_HALF));
+            case SOUTH: return new Handle(direction,
+                    new AxisAlignedBB(cx - SHAFT_HALF, cy - SHAFT_HALF, box.maxZ + GAP,
+                            cx + SHAFT_HALF, cy + SHAFT_HALF, box.maxZ + GAP + SHAFT_LENGTH),
+                    new AxisAlignedBB(cx - HEAD_HALF, cy - HEAD_HALF, box.maxZ + GAP + SHAFT_LENGTH,
+                            cx + HEAD_HALF, cy + HEAD_HALF, box.maxZ + GAP + SHAFT_LENGTH + HEAD_LENGTH));
+            case NORTH: return new Handle(direction,
+                    new AxisAlignedBB(cx - SHAFT_HALF, cy - SHAFT_HALF, box.minZ - GAP - SHAFT_LENGTH,
+                            cx + SHAFT_HALF, cy + SHAFT_HALF, box.minZ - GAP),
+                    new AxisAlignedBB(cx - HEAD_HALF, cy - HEAD_HALF, box.minZ - GAP - SHAFT_LENGTH - HEAD_LENGTH,
+                            cx + HEAD_HALF, cy + HEAD_HALF, box.minZ - GAP - SHAFT_LENGTH));
+            default: throw new AssertionError(direction);
         }
     }
 
-    private static Handle handle(AABB box, Direction direction) {
-        double minX = box.minX;
-        double minY = box.minY;
-        double minZ = box.minZ;
-        double maxX = box.maxX;
-        double maxY = box.maxY;
-        double maxZ = box.maxZ;
-        double centerX = (minX + maxX) * 0.5D;
-        double centerY = (minY + maxY) * 0.5D;
-        double centerZ = (minZ + maxZ) * 0.5D;
-
-        return switch (direction) {
-            case EAST -> new Handle(
-                    direction,
-                    new AABB(
-                            maxX + GAP, centerY - SHAFT_HALF, centerZ - SHAFT_HALF,
-                            maxX + GAP + SHAFT_LENGTH, centerY + SHAFT_HALF, centerZ + SHAFT_HALF),
-                    new AABB(
-                            maxX + GAP + SHAFT_LENGTH, centerY - HEAD_HALF, centerZ - HEAD_HALF,
-                            maxX + GAP + SHAFT_LENGTH + HEAD_LENGTH, centerY + HEAD_HALF, centerZ + HEAD_HALF));
-            case WEST -> new Handle(
-                    direction,
-                    new AABB(
-                            minX - GAP - SHAFT_LENGTH, centerY - SHAFT_HALF, centerZ - SHAFT_HALF,
-                            minX - GAP, centerY + SHAFT_HALF, centerZ + SHAFT_HALF),
-                    new AABB(
-                            minX - GAP - SHAFT_LENGTH - HEAD_LENGTH, centerY - HEAD_HALF, centerZ - HEAD_HALF,
-                            minX - GAP - SHAFT_LENGTH, centerY + HEAD_HALF, centerZ + HEAD_HALF));
-            case UP -> new Handle(
-                    direction,
-                    new AABB(
-                            centerX - SHAFT_HALF, maxY + GAP, centerZ - SHAFT_HALF,
-                            centerX + SHAFT_HALF, maxY + GAP + SHAFT_LENGTH, centerZ + SHAFT_HALF),
-                    new AABB(
-                            centerX - HEAD_HALF, maxY + GAP + SHAFT_LENGTH, centerZ - HEAD_HALF,
-                            centerX + HEAD_HALF, maxY + GAP + SHAFT_LENGTH + HEAD_LENGTH, centerZ + HEAD_HALF));
-            case DOWN -> new Handle(
-                    direction,
-                    new AABB(
-                            centerX - SHAFT_HALF, minY - GAP - SHAFT_LENGTH, centerZ - SHAFT_HALF,
-                            centerX + SHAFT_HALF, minY - GAP, centerZ + SHAFT_HALF),
-                    new AABB(
-                            centerX - HEAD_HALF, minY - GAP - SHAFT_LENGTH - HEAD_LENGTH, centerZ - HEAD_HALF,
-                            centerX + HEAD_HALF, minY - GAP - SHAFT_LENGTH, centerZ + HEAD_HALF));
-            case SOUTH -> new Handle(
-                    direction,
-                    new AABB(
-                            centerX - SHAFT_HALF, centerY - SHAFT_HALF, maxZ + GAP,
-                            centerX + SHAFT_HALF, centerY + SHAFT_HALF, maxZ + GAP + SHAFT_LENGTH),
-                    new AABB(
-                            centerX - HEAD_HALF, centerY - HEAD_HALF, maxZ + GAP + SHAFT_LENGTH,
-                            centerX + HEAD_HALF, centerY + HEAD_HALF, maxZ + GAP + SHAFT_LENGTH + HEAD_LENGTH));
-            case NORTH -> new Handle(
-                    direction,
-                    new AABB(
-                            centerX - SHAFT_HALF, centerY - SHAFT_HALF, minZ - GAP - SHAFT_LENGTH,
-                            centerX + SHAFT_HALF, centerY + SHAFT_HALF, minZ - GAP),
-                    new AABB(
-                            centerX - HEAD_HALF, centerY - HEAD_HALF, minZ - GAP - SHAFT_LENGTH - HEAD_LENGTH,
-                            centerX + HEAD_HALF, centerY + HEAD_HALF, minZ - GAP - SHAFT_LENGTH));
-        };
-    }
-
-    private static Optional<Double> rayHit(AABB box, Vec3 origin, Vec3 direction, double maxDistance) {
+    private static Optional<Double> rayHit(AxisAlignedBB box, Vec3d origin,
+            Vec3d direction, double maxDistance) {
         double[] x = axis(origin.x, direction.x, box.minX, box.maxX);
         double[] y = axis(origin.y, direction.y, box.minY, box.maxY);
         double[] z = axis(origin.z, direction.z, box.minZ, box.maxZ);
-        if (x == null || y == null || z == null) {
-            return Optional.empty();
-        }
+        if (x == null || y == null || z == null) return Optional.empty();
         double enter = Math.max(0.0D, Math.max(x[0], Math.max(y[0], z[0])));
         double exit = Math.min(maxDistance, Math.min(x[1], Math.min(y[1], z[1])));
-        return exit >= enter && enter <= maxDistance ? Optional.of(enter) : Optional.empty();
+        return exit >= enter && enter <= maxDistance ? Optional.of(enter) : Optional.<Double>empty();
     }
 
     private static double[] axis(double origin, double direction, double min, double max) {
         if (Math.abs(direction) < EPSILON) {
             return origin >= min && origin <= max
-                    ? new double[] {Double.NEGATIVE_INFINITY, Double.POSITIVE_INFINITY}
-                    : null;
+                    ? new double[] {Double.NEGATIVE_INFINITY, Double.POSITIVE_INFINITY} : null;
         }
         double t1 = (min - origin) / direction;
         double t2 = (max - origin) / direction;
         return new double[] {Math.min(t1, t2), Math.max(t1, t2)};
     }
 
-    public record Handle(Direction direction, AABB shaft, AABB head) {
-        public Direction.Axis axis() {
-            return direction.getAxis();
+    public static final class Handle {
+        private final EnumFacing direction;
+        private final AxisAlignedBB shaft;
+        private final AxisAlignedBB head;
+        public Handle(EnumFacing direction, AxisAlignedBB shaft, AxisAlignedBB head) {
+            this.direction = direction; this.shaft = shaft; this.head = head;
         }
-
-        private Optional<HandleHit> hit(Vec3 origin, Vec3 direction, double maxDistance) {
+        public EnumFacing direction() { return direction; }
+        public AxisAlignedBB shaft() { return shaft; }
+        public AxisAlignedBB head() { return head; }
+        public EnumFacing.Axis axis() { return direction.getAxis(); }
+        private Optional<HandleHit> hit(Vec3d origin, Vec3d direction, double maxDistance) {
             Optional<Double> shaftHit = rayHit(shaft, origin, direction, maxDistance);
             Optional<Double> headHit = rayHit(head, origin, direction, maxDistance);
-            if (shaftHit.isEmpty()) {
-                return headHit.map(distance -> new HandleHit(this.direction, distance));
-            }
-            if (headHit.isEmpty()) {
-                return shaftHit.map(distance -> new HandleHit(this.direction, distance));
-            }
+            if (!shaftHit.isPresent()) return headHit.isPresent()
+                    ? Optional.of(new HandleHit(this.direction, headHit.get())) : Optional.<HandleHit>empty();
+            if (!headHit.isPresent()) return Optional.of(new HandleHit(this.direction, shaftHit.get()));
             return Optional.of(new HandleHit(this.direction, Math.min(shaftHit.get(), headHit.get())));
         }
+        @Override public boolean equals(Object other) {
+            if (this == other) return true;
+            if (!(other instanceof Handle)) return false;
+            Handle that = (Handle) other;
+            return direction == that.direction && Objects.equals(shaft, that.shaft) && Objects.equals(head, that.head);
+        }
+        @Override public int hashCode() { return Objects.hash(direction, shaft, head); }
+        @Override public String toString() { return "Handle[direction=" + direction + ", shaft=" + shaft + ", head=" + head + "]"; }
     }
 
-    public record HandleHit(Direction direction, double distance) {
+    public static final class HandleHit {
+        private final EnumFacing direction;
+        private final double distance;
+        public HandleHit(EnumFacing direction, double distance) { this.direction = direction; this.distance = distance; }
+        public EnumFacing direction() { return direction; }
+        public double distance() { return distance; }
+        @Override public boolean equals(Object other) {
+            if (this == other) return true;
+            if (!(other instanceof HandleHit)) return false;
+            HandleHit that = (HandleHit) other;
+            return direction == that.direction && Double.compare(distance, that.distance) == 0;
+        }
+        @Override public int hashCode() { return Objects.hash(direction, distance); }
+        @Override public String toString() { return "HandleHit[direction=" + direction + ", distance=" + distance + "]"; }
     }
 }
