@@ -5,6 +5,8 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.nio.charset.StandardCharsets;
 
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -20,8 +22,8 @@ class RtsHomeCameraStartContractTest {
                 "普通 RTS 启动必须检查玩家是否位于家园周围的 3x3 区块内");
         assertTrue(camera.contains("\"message.rtsbuilding.home.too_far\""),
                 "超出 3x3 启动区域时应给玩家 actionbar 提示");
-        assertTrue(camera.contains("net.minecraft.ChatFormatting.RED")
-                        && camera.contains("net.minecraft.ChatFormatting.BOLD"),
+        assertTrue(camera.contains("TextFormatting.RED")
+                        && camera.contains("setBold(Boolean.TRUE)"),
                 "距离提示应使用醒目的红色粗体样式");
         assertFalse(worldAccess.contains("canAccessHomeRadius"),
                 "会话启动后，世界操作范围不得再与家园半径取交集");
@@ -30,6 +32,7 @@ class RtsHomeCameraStartContractTest {
     }
 
     private static String read(String relative) throws IOException {
-        return Files.readString(Path.of("src/main/java/com/rtsbuilding/rtsbuilding", relative));
+        Path path = Paths.get("src/main/java/com/rtsbuilding/rtsbuilding", relative);
+        return new String(Files.readAllBytes(path), StandardCharsets.UTF_8);
     }
 }
